--- a/SimpleEcommerceAspNet6/SimpleEcommerceAspNet6.csproj
+++ b/SimpleEcommerceAspNet6/SimpleEcommerceAspNet6.csproj
@@ -7,8 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Areas\Manager\Data\" />
+    <Folder Include="Areas\Manager\Models\" />
     <Folder Include="Services\" />
     <Folder Include="Repositories\" />
+    <Folder Include="wwwroot\css\" />
   </ItemGroup>
 
   <ItemGroup>
